--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "yarn": "^1.0.0"
   },
   "scripts": {
-    "install": "cd client && yarn install",
-    "postinstall": "cd client && yarn build"
+    "postinstall": "cd frontend && yarn install && yarn build"
   },
   "dependencies": {},
   "devDependencies": {},
