--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "SentAd Gradua Web App",
-  "version": "0.0.1",
-  "engines": {
-    "node": "^7.8.0 || ^8.0.0 || ^9.2.0",
-    "npm": "^4.4.4 || ^5.0.0",
-    "yarn": "^1.0.0"
-  },
+  "name": "snt-gradua",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "postinstall": "cd frontend && yarn install && yarn build"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cd frontend && npm install"
   },
-  "dependencies": {},
-  "devDependencies": {},
-  "cacheDirectories": [
-    "node_modules",
-    "frontend/node_modules"
-  ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/msoufiane/snt-gradua.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/msoufiane/snt-gradua/issues"
+  },
+  "homepage": "https://github.com/msoufiane/snt-gradua#readme"
 }
