--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd frontend && npm install && npm run build"
+    "postinstall": "mkdir -p assets/bundles && cd frontend && npm install && npm run build"
   },
   "repository": {
     "type": "git",
