--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,38 +3,58 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "admin-lte": "2.4.2",
     "autoprefixer": "7.1.6",
+    "axios": "0.16.2",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-react-app": "^3.1.0",
     "babel-runtime": "6.26.0",
+    "bootstrap": "^3.3.7",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
-    "dotenv-expand": "4.0.1",
     "eslint": "4.10.0",
-    "eslint-config-react-app": "^2.1.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-react-app": "^2.0.1",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "7.4.0",
+    "eslint-watch": "^3.1.3",
     "extract-text-webpack-plugin": "3.0.2",
+    "fastclick": "^1.0.6",
     "file-loader": "1.1.5",
+    "font-awesome": "^4.7.0",
     "fs-extra": "3.0.1",
+    "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
+    "ionicons": "3.0.0",
     "jest": "20.0.4",
+    "jquery": "^3.2.1",
     "object-assign": "4.1.1",
+    "path": "^0.12.7",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.6.0",
     "raf": "3.4.0",
-    "react": "^16.2.0",
+    "react": "^15",
     "react-dev-utils": "^5.0.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "^15",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "4.2.2",
+    "react-router-redux": "5.0.0-alpha.6",
+    "redux": "3.6.0",
+    "redux-form": "7.1.1",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-saga": "0.15.6",
+    "slimscroll": "^0.9.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
