adding more flexibility

--- a/frontend/.eslintignore
+++ b/frontend/.eslintignore
@@ -1,5 +1,5 @@
-./src/registerServiceWorker.jsx
-./src/setupTests.jsx
-./scripts/*
-./config/*
-./tools/*
+src/registerServiceWorker.js*
+src/setupTests.js*
+scripts/*
+config/*
+tools/*
