--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,14 @@
     "dotenv": "4.0.0",
     "eslint": "4.10.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-react-app": "^2.0.1",
+    "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-react-app": "^1.0.2",
     "eslint-watch": "^3.1.3",
     "extract-text-webpack-plugin": "3.0.2",
     "fastclick": "^1.0.6",
