--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
-dj-static==0.0.6
-Django==2.0.2
-django-toolbelt==0.0.1
-gunicorn==19.7.1
-pytz==2017.3
-static3==0.7.0
-virtualenv==15.1.0
-django-cors-headers==2.1.0
-dj-database-url==0.4.2
-whitenoise==3.3.1
-django-rest-framework==0.1.0
 django-webpack-loader==0.5.0
-django-debug-toolbar==1.9.1
+django-cors-headers==2.1.0
+djangorestframework==3.7.7
+django-model-utils==3.1.1
+django-rest-knox==3.1.2
+django-countries==5.1.1
+django-toolbelt==0.0.1
+django-guardian==1.4.9
+dj-database-url==0.4.2
+django-taggit==0.22.2
+django-filter==1.1.0
+virtualenv==15.1.0
+whitenoise==3.3.1
+dj-static==0.0.6
+gunicorn==19.7.1
+markdown==2.6.11
+static3==0.7.0
+Django==2.0.2
+pytz==2017.3
