--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "react": "^15",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^15",
+    "react-gravatar": "^2.6.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
