--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "admin-lte": "2.4.2",
+    "apollo-cache-inmemory": "^1.1.12",
+    "apollo-client": "^2.2.8",
+    "apollo-client-preset": "^1.0.8",
+    "apollo-link-http": "^1.5.4",
     "autoprefixer": "7.1.6",
     "axios": "0.16.2",
     "babel-core": "6.26.0",
@@ -34,11 +38,15 @@
     "file-loader": "1.1.5",
     "font-awesome": "^4.7.0",
     "fs-extra": "3.0.1",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.8.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "ionicons": "3.0.0",
     "jest": "20.0.4",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.5",
+    "node-fetch": "^2.1.2",
     "object-assign": "4.1.1",
     "path": "^0.12.7",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -47,6 +55,7 @@
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
     "react": "^15",
+    "react-apollo": "^2.1.3",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^15",
     "react-gravatar": "^2.6.3",
