--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+django-role-permissions==2.2.0
 django-webpack-loader==0.5.0
 django-cors-headers==2.1.0
 djangorestframework==3.7.7
@@ -15,5 +16,6 @@ dj-static==0.0.6
 gunicorn==19.7.1
 markdown==2.6.11
 static3==0.7.0
+graphene==2.1
 Django==2.0.2
 pytz==2017.3
