--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "admin-lte": "2.4.2",
-    "apollo-cache-inmemory": "^1.1.12",
-    "apollo-client": "^2.2.8",
+    "apollo-boost": "^0.1.6",
+    "apollo-cache-inmemory": "^1.2.1",
+    "apollo-client": "^2.3.1",
     "apollo-client-preset": "^1.0.8",
+    "apollo-link": "^1.2.2",
     "apollo-link-http": "^1.5.4",
     "autoprefixer": "7.1.6",
     "axios": "0.16.2",
@@ -39,7 +41,7 @@
     "font-awesome": "^4.7.0",
     "fs-extra": "3.0.1",
     "graphql": "^0.13.2",
-    "graphql-tag": "^2.8.0",
+    "graphql-tag": "^2.9.2",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "ionicons": "3.0.0",
@@ -55,7 +57,8 @@
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
     "react": "^15",
-    "react-apollo": "^2.1.3",
+    "react-apollo": "^2.1.4",
+    "react-cookies": "^0.1.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^15",
     "react-gravatar": "^2.6.3",
