--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,7 +67,8 @@
     "redux": "3.6.0",
     "redux-form": "7.1.1",
     "redux-immutable-state-invariant": "^2.1.0",
-    "redux-saga": "0.15.6",
+    "redux-saga": "0.16.0",
+    "redux-thunk": "^2.2.0",
     "slimscroll": "^0.9.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
