--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -10,6 +10,7 @@
   "plugins": ["react"],
   "rules": {
     "jsx-a11y/href-no-hash": 0,
-    "jsx-a11y/anchor-is-valid": 0
+    "jsx-a11y/anchor-is-valid": 0,
+    "jsx-a11y/label-has-for": 0
   }
 }
