--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -11,6 +11,7 @@
   "rules": {
     "jsx-a11y/href-no-hash": 0,
     "jsx-a11y/anchor-is-valid": 0,
-    "jsx-a11y/label-has-associated-control": 0
+    "jsx-a11y/label-has-associated-control": 0,
+    "import/prefer-default-export": 0
   }
 }
