--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
+    "react-select": "^2.0.0",
     "redux": "3.6.0",
     "redux-form": "7.1.1",
     "redux-immutable-state-invariant": "^2.1.0",
